[package]
name = "sandstorm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2.21"
miette = { version = "3.2.0", features = ["fancy"] }
serde = { version = "1.0.130", features = [ "derive", "rc" ] }
thiserror = "1.0.29"
typed-builder = "0.9.1"

[dev-dependencies]
criterion = "0.3.5"
insta = "1.8.0"

[[bench]]
name = "lex"
harness = false

